# SSB_Spark_tools

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml  python-package.yml  python-publish.yml
SSB_Spark_tools/: __init__.py
SSB_Spark_tools/Buisness_logging/: Process_logging.py
SSB_Spark_tools/data_processing/: Utils.py  controlls.py
SSB_Spark_tools/utils/: Usefull spark snippets.txt  listcode_functions.py  missing_functions.py  proc_compare.py
development/: editing_test.ipynb  test_note-QualityMissing.ipynb  test_note-cross_sectional.ipynb  test_note-documentation.ipynb  test_note-listcode_functions.ipynb  test_note-unpack_parquet.ipynb  test_note_missing.ipynb
development/editing/: controls_test.ipynb  editing_test.ipynb
development/logging/: logging_test.ipynb
development/processing/: processing_test.ipynb
development/quality/: quality_test.ipynb
development/utils/: utils.ipynb
pytests/: Generate_test_data.ipynb  test_unittests.py  test_utils.py
ssb_sparktools/: __init__.py
ssb_sparktools/editing/: controls.py  editing.py  micro_edditing.py
ssb_sparktools/processing/: processing.py
ssb_sparktools/quality/: quality.py
ssb_sparktools/utils/: __init__.py  utils.py
test/test_notes/: test_not-listcode_functions.ipynb  test_note-listcode_functions.ipynb  test_note_missing.ipynb  test_note_proc_compare.ipynb
