[tool.poetry]
name = "ssb-spark-tools"
version = "0.1.12"
description = "A collection of data processing Spark functions for the use in Statistics Norway."
authors = ["Statistics Norway <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ssb_sparktools"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyspark = "~3.3.1"
pandas = "^1.5.1"
numpy = ">=1.20.3,<1.24"  # toPandas in pyspark 3.3.1 does not work with numpy >= 1.24

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
pre-commit = "^3.3.2"
pre-commit-hooks = "^4.4.0"
jupyterlab = "^4.0.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
lines_after_imports = 2
